--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.2.5",
         "laravel/lumen-framework": "^7.0",
+        "nordsoftware/lumen-cors": "^3.3",
         "thedevsaddam/lumen-route-list": "^2.0",
         "tymon/jwt-auth": "^1.0"
     },
