--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_TIMEZONE=Asia/Taipei
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=mysqlw
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
@@ -19,3 +19,4 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
 JWT_SECRET=foobar
+JWT_TTL=1440
