--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
+        "darkaonline/swagger-lume": "7.*",
         "laravel/lumen-framework": "^7.0",
         "nordsoftware/lumen-cors": "^3.3",
         "thedevsaddam/lumen-route-list": "^2.0",
