--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,7 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    SSLEngine on
     RewriteEngine On
 
     # Handle Authorization Header
