--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
