--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   laravel-tests:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     services:
       mysql:
         image: mysql:5.7
