--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,6 +27,10 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
+    - name: Migrate database
+      env:
+        DB_PORT: ${{ job.services.mysql.ports[3306] }}
+      run: php artisan migrate
     - name: Seed database
       env:
         DB_PORT: ${{ job.services.mysql.ports[3306] }}
