--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     },
     "autoload-dev": {
         "classmap": [
-            "tests/"
+            "tests/",
+            "database/"
         ]
     },
     "config": {
