--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
+        "ext-json": "*",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^8.5",
-        "ext-json": "*"
+        "overtrue/phplint": "^2.3",
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "classmap": [
